--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@
     color: white;
     padding: 20px;
 }
-.h1,{
+.h1 h1{
     width: 100%; 
     text-align: center;
     font-size: 40px;
     font-weight: 900;
 }
-.h5,{ text-align: center;
+.h5 h5,{ text-align: center;
     font-size: 20px;
 }
 nav{ width: 100%;
